// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button renders with no props specified 1`] = `
.c0 {
  border: none;
  color: #d5d5d5;
  border-radius: 4px;
  background: -webkit-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  background: -moz-linear-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  background: -o-linear-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  padding: 5px 10px;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  cursor: pointer;
}

<button
  className="c0"
  theme={
    Object {
      "alert": Object {
        "error": "#FF0000",
      },
      "brand": Object {
        "dark": "rgb(1, 20, 46)",
        "light": "rgb(8, 62, 101)",
      },
      "textColor": "#EEEEEE",
    }
  }
>
  MyButton
</button>
`;

exports[`Button Button renders with props specified 1`] = `
.c0 {
  border: none;
  color: #d5d5d5;
  border-radius: 4px;
  background: -webkit-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  background: -moz-linear-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  background: -o-linear-gradient(linear,left top,right top,from(#5019ed),to(#670c94));
  padding: 5px 10px;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  cursor: pointer;
}

<button
  a={1}
  b={2}
  c={3}
  className="c0"
  theme={
    Object {
      "alert": Object {
        "error": "#FF0000",
      },
      "brand": Object {
        "dark": "rgb(1, 20, 46)",
        "light": "rgb(8, 62, 101)",
      },
      "textColor": "#EEEEEE",
    }
  }
>
  MyButton
</button>
`;
